--- a/koa-mongoDB/public/user_list.html
+++ b/koa-mongoDB/public/user_list.html
@@ -96,6 +96,7 @@
 
             document.querySelector("#username").innerHTML = name;
         </script>
+        <a href="/chat.html">进入聊天室</a>
     </h1>
     <h2>
         <button id="logout">退出</button>
