使用 socket.io 实现聊天室

--- a/koa-mysql/public/user_list.html
+++ b/koa-mysql/public/user_list.html
@@ -95,7 +95,7 @@
             const name = register.username || "回来";
 
             document.querySelector("#username").innerHTML = name;
-        </script>
+        </script><a href="/chat.html">进入聊天室</a>
     </h1>
     <h2>
         <button id="logout">退出</button>
